--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,17 +11,18 @@ androidx-espresso-core = "3.6.0"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.0"
 coil = "3.0.0-alpha06"
-compose-plugin = "1.6.11"
+compose-plugin = "1.7.0-alpha01"
 junit = "4.13.2"
-koinBom = "3.6.0-wasm-alpha2"
+koinBom = "4.0.0-RC1"
 kotlin = "2.0.0"
+kotlinxCoroutinesSwing = "1.9.0-RC"
 ktorClientAndroid = "2.3.12"
+landscapistCoil3 = "2.3.6"
 lifecycleRuntimeKtx = "2.8.3"
 napier = "2.6.1"
-navigationCompose = "2.7.0-alpha07"
-ktor = "3.0.0-wasm2"
-coroutines = "2.0.0"
-koinComposeMultiplatform = "1.2.0-Beta5"
+navigationCompose = "2.8.0-alpha08"
+ktor = "3.0.0-beta-2"
+coroutines = "1.9.0-RC"
 timber = "5.0.1"
 previewVersion = "1.7.0-beta05"
 
@@ -31,6 +32,9 @@ coil-core = { module = "io.coil-kt.coil3:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-compose-core = { module = "io.coil-kt.coil3:coil-compose-core", version.ref = "coil" }
 coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor", version.ref = "coil" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinxCoroutinesSwing" }
+landscapist-coil3 = { module = "com.github.skydoves:landscapist-coil3", version.ref = "landscapistCoil3" }
+landscapist-glide = { module = "com.github.skydoves:landscapist-glide", version.ref = "landscapistCoil3" }
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 insert-koin-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose" }
 koin-android = { module = "io.insert-koin:koin-android" }
@@ -38,8 +42,8 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview",version.ref = "previewVersion" }
 koin-core = { module = "io.insert-koin:koin-core" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinComposeMultiplatform" }
-koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koinComposeMultiplatform"}
+koin-compose = { module = "io.insert-koin:koin-compose" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel"}
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
