--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.6.0"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.0"
-coil = "3.0.0-alpha06"
+coil = "3.0.0-alpha07"
 compose-plugin = "1.7.0-alpha01"
 junit = "4.13.2"
 koinBom = "4.0.0-RC1"
@@ -21,7 +21,7 @@ landscapistCoil3 = "2.3.6"
 lifecycleRuntimeKtx = "2.8.3"
 napier = "2.6.1"
 navigationCompose = "2.8.0-alpha08"
-ktor = "3.0.0-beta-2"
+ktor = "2.3.12"
 coroutines = "1.9.0-RC"
 timber = "5.0.1"
 previewVersion = "1.7.0-beta05"
